<resources>
    <string name="app_name">MobileDev</string>
    <string name="ivanov_ivan">Иванов Иван ПИ-9000</string>
    <string name="ok">OK</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="log">Log</string>
    <string name="timber">timber</string>
    <string name="black_text">Черный текст</string>
    <string name="white_text">Белый текст</string>
    <string name="big_size">Размер 24 SP</string>
    <string name="low_size">Размер 8 SP</string>
    <string name="yellow_background">Желтый фон</string>
    <string name="white_background">Белый фон</string>
    <string name="enter_text">Введите текст</string>
    <string name="need_save">Точно сохранить?</string>
    <string name="save">Сохранить</string>
</resources>