<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Lab3Activity">

    <EditText
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:layout_height="220dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btBlackText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/black_text"
            app:layout_constraintEnd_toStartOf="@id/btWhiteText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btWhiteText"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/white_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btBlackText" />

        <Button
            android:id="@+id/btBigSize"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/big_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btLowSize"
            app:layout_constraintTop_toBottomOf="@+id/btWhiteBackground" />

        <Button
            android:id="@+id/btLowSize"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/low_size"
            app:layout_constraintEnd_toStartOf="@id/btBigSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btYellowBackground" />

        <Button
            android:id="@+id/btYellowBackground"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/yellow_background"
            app:layout_constraintEnd_toStartOf="@id/btWhiteBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btBlackText" />

        <Button
            android:id="@+id/btWhiteBackground"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/white_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btYellowBackground"
            app:layout_constraintTop_toBottomOf="@+id/btWhiteText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>