<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Lab2Activity">

    <EditText
        android:id="@+id/etThirdTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/enter_text" />

    <CheckBox
        android:id="@+id/cbThirdTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/need_save" />

    <Button
        android:id="@+id/btThirdTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <TextView
        android:id="@+id/tvThirdTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <ProgressBar
        android:id="@+id/pbThirdTask"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

</LinearLayout>